@@ -127,7 +127,10 @@ rename over existing
 delete file
 ---- timestamp
 D:20210209144925-05'00'
+2021-02-09T14:49:25-05:00
 D:20210210011925+05'30'
+2021-02-10T01:19:25+05:30
 D:20210209191925Z
+2021-02-09T19:19:25Z
 ---- is_long_long
 done
